<resources>
    <string name="app_name">SportsApp</string>
    <string name="favoirte_league">Favoirte League</string>
    <string name="enter_a_league">Enter a League</string>
    <string name="enter_integer">Enter Integer</string>
    <string name="enter_an_integer">Enter an Integer</string>
    <string name="enter_an_integer_text">Enter an Integer</string>
    <string name="enter_a_decimal">Enter a decimal</string>
    <string name="sportsapp_test">Sportsapp Test</string>
    <string name="submit">Submit</string>
    <string name="nothing_to_show">Nothing to show.</string>
    <string name="login_welcome">Welcome to SportsApp\nPlease sign in.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="preference_file_key">daclinkPreferenceFileNameSportsapp</string>
    <string name="preference_user_Id_key">daclinkPreferenceUserIdKeysportsApp</string>
    <string name="don_t_have_an_account_click_here_to_register">Don\'t have an Account?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="admin_page">Admin Page</string>
    <string name="add_user">Add User</string>
    <string name="users_info">Users Info</string>
    <string name="delete_user">Delete User</string>
    <string name="mlb_scores">MLB Scores</string>
    <string name="test">test</string>
    <string name="mlb_score">MLB SCORES</string>
    <string name="mlb_logo">mlb_logo</string>
    <string name="favorite_a_team">Favorite a Team</string>
    <string name="nba_scores">NBA Scores</string>
    <string name="away_team_logo">away team logo</string>
    <string name="home_team_logo">home team logo</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="my_stats">My Stats</string>
    <string name="leagues">Leagues:</string>
    <string name="guest">Guest</string>
    <string name="do_you_want_to_delete">Do You want to Delete?</string>
    <string name="cancel">Cancel</string>
    <string name="who_do_you_want_to_delete">Who do you want to delete?</string>
    <string name="create_a_user">Create a User</string>
    <string name="create">Create</string>
    <string name="user_info">USER INFO:</string>
    <string name="back">Back</string>
</resources>