<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/sportsAppDisplayTextView"
        android:layout_width="390dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dip"
        android:padding="8dp"
        android:text="@string/sportsapp_test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:layout_width="390dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sportsAppDisplayTextView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/my_stats"
        android:textSize="36sp"
        android:id="@+id/SearchButton"
        />
    <Button
        android:layout_width="390dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SearchButton"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/delete"
        android:textSize="36sp"
        android:id="@+id/MyStatsButton"
        />
    <Button
        android:layout_width="390dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nbaPage"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/admin_page"
        android:textSize="36sp"
        android:id="@+id/adminPage"
        />

    <Button
        android:layout_width="390dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/MyStatsButton"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/mlb_scores"
        android:textSize="36sp"
        android:id="@+id/mlbPage"
        />

    <Button
        android:layout_width="390dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mlbPage"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/nba_scores"
        android:textSize="36sp"
        android:id="@+id/nbaPage"
        />


</androidx.constraintlayout.widget.ConstraintLayout>