<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MlbActivity">

    <Button
        android:id="@+id/favoriteATeamButton"
        android:layout_width="275dp"
        android:layout_height="110dp"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/favorite_a_team"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        />
    <Button
        android:id="@+id/backButton"
        android:layout_width="275dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/back"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        />
    <Button
        android:id="@+id/RegisterMlbButton"
        android:layout_width="275dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="425dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mlbTitleTextView"
        android:id="@+id/scrollView"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:id="@+id/my_layout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:gravity="center"
            android:orientation="vertical"
            android:textAlignment="center"
            tools:ignore="MissingConstraints">

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/mlbTitleTextView"
        android:layout_width="299dp"
        android:layout_height="59dp"
        android:layout_margin="0dp"
        android:gravity="center"
        android:padding="0dp"
        android:paddingTop="0dp"
        android:text="@string/mlb_scores"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginBottom="30dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="118dp"
        android:layout_height="90dp"
        android:contentDescription="@string/mlb_logo"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mlb_logo" />


</androidx.constraintlayout.widget.ConstraintLayout>