<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeleteActivity">
    <TextView
        android:id="@+id/deleteTextView"
        android:layout_width="390dp"
        android:layout_height="75dp"
        android:layout_marginTop="50dip"
        android:text="@string/do_you_want_to_delete"
        android:textSize="25sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:layout_width="390dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deleteTextView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="75dp"
        android:text="@string/delete"
        android:textSize="36sp"
        android:id="@+id/deleteButton"
        />
    <Button
        android:layout_width="390dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deleteButton"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/cancel"
        android:textSize="36sp"
        android:id="@+id/cancelButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>